added ogs6-de features until beginning of november 2013 (for ogs-course in china)

--- a/app-literature.tex
+++ b/app-literature.tex
@@ -3,37 +3,65 @@
 
 \begin{thebibliography}{}
 
-\bibitem{ogs04}
+\subsection*{OpenGeoSys Literature}
+
+\bibitem{kalbacher:modelling}
 Kalbacher T, Mettier R, et al.: Geometric modelling and object-oriented software concepts applied to a heterogeneous fractured network from the grimsel rock laboratory.
 \emph{Comput Geosci,} \textbf{11(1):} 9--26 (2007)
 
-\bibitem{ogs05}
+\bibitem{kolditz:clean}
+Kolditz O, Bauer S, Bilke L, et al.: OpenGeoSys: An open source initiative for numerical simulation of thermo-hydro-mechanical/chemical (THM/C) processes in porous media. \emph{Environ Earth Sci,} \textbf{67(2):}589--599 (2012)
+
+\bibitem{kolditz:book}
+Kolditz O, Görke J-U, Shao H, Wang W (Eds): Thermo-Hydro-Mechanical-Chemical Processes in Fractured Media. Springer Berlin-Heidelberg, ISBN:978-3-642-27176-2, (2012)
+
+\bibitem{ogs:web}
 OpenGeoSys -- scientific software for coupled processes in porous media,
 \texttt{http://www.opengeosys.org}
 
-\bibitem{ogs06}
+\bibitem{ogs:wiki}
 OpenGeoSys-Wiki: Source code, current projects, presentations and much more. \texttt{https://svn.ufz.de/ogs/}
 
-\bibitem{ogs07}
-Rink K, Bilke L, Selle B, Kolditz O: User Guided Generation of Hydrological Models: Interface Design, Workflows and Concepts for an Extensible Software Framework. \emph{Proc. of 6th
-Int Congress on Environmental Modelling and Software (iEMSs2012),} (2012)
-
-\bibitem{ogs07}
-Rink K, Fischer T, Kolditz O: Data Visualisation and Validation for Hydrological Models. \emph{Proc. of International Conference on Computer Graphics, Visualization, Computer Vision and Image Processing (CGVCVIP2011),} pages 169--176 (2011)
-
-\bibitem{ogs09}
-Rink K, Fischer T, Selle B, Kolditz O: A Data Exploration Framework for Validation and Setup of Hydrological Models.
-\emph{Environ Earth Sci,} \textbf{69(2)} (2013) 
-DOI: 10.1007/s12665-012-2030-3
-
-\bibitem{ogs03}
-Rink K, Kalbacher T, Kolditz O: Visual Data Exploration for Hydrological Analysis. \emph{Environ Earth Sci,} \textbf{65(5):} 1395--1403 (2012)
-
-\bibitem{ogs01}
+\bibitem{wang:thm}
 Wang W, Kolditz O: Object-oriented finite element analysis of thermo-hydro-mechanical (THM) problems in porous media.
 \emph{Int J Numer Meth Engng,} \textbf{69:}162--201 (2007)
 
-\bibitem{ogs02}
+\bibitem{wang:pfem}
 Wang W, Kosakowski G, Kolditz O: A parallel finite element scheme for thermo-hydro-mechanical (THM) coupled problems in porous media \emph{Comput Geosci,} \textbf{35(8):}1631--1641 (2009)
+
+
+\subsection*{Data Explorer Literature}
+
+\bibitem{rink:envirvis}
+Rink K, Bilke L, Kolditz O: Visualisation Strategies for Modelling and Simulation Using Geoscientific Data. \emph{Proc. of Workshop on Visualisation of Environmental Data, Leipzig Germany,} p. 47--51, The EuroGraphics Association.
+
+\bibitem{rink:iemss}
+Rink K, Bilke L, Selle B, Kolditz O: User Guided Generation of Hydrological Models: Interface Design, Workflows and Concepts for an Extensible Software Framework. \emph{Proc. of 6th
+Int Congress on Environmental Modelling and Software (iEMSs2012), Leipzig, Germany,} (2012)
+
+\bibitem{rink:modelcare}
+Rink K, Fischer T, Gräbe A, Kolditz O: Visual Preparation of Hydrological Models. In \emph{Models -- Repositories of Knowledge,} IAHS Redbook \#355, ISBN: 978-1-907161-34-6, 113--118, (2012)
+
+\bibitem{rink:cgvcvip}
+Rink K, Fischer T, Kolditz O: Data Visualisation and Validation for Hydrological Models. \emph{Proc. of International Conference on Computer Graphics, Visualization, Computer Vision and Image Processing (CGVCVIP2011), Rome, Italy,} p. 169--176, (2011)
+
+\bibitem{rink:catchres}
+Rink K, Fischer T, Selle B, Kolditz O: A Data Exploration Framework for Validation and Setup of Hydrological Models.
+\emph{Environ Earth Sci,} \textbf{69(2):}469--477, (2013)
+
+\bibitem{rink:iwas}
+Rink K, Kalbacher T, Kolditz O: Visual Data Exploration for Hydrological Analysis. \emph{Environ Earth Sci,} \textbf{65(5):} 1395--1403 (2012)
+
+
+\subsection*{Case Studies}
+
+\bibitem{gräbe:deadsea}
+Gräbe A, Rödiger T, Rink K, et al.: Numerical analysis of the groundwater regime in the western Dead Sea escarpment, Israel + West Bank. \emph{Environ Earth Sci,} \textbf{69(2):}571--585, (2013)
+
+\bibitem{selle:wess}
+Selle B, Rink K, Kolditz O: Recharge and discharge controls on groundwater travel times and flow paths to production wells for the Ammer catchment in SW Germany. \emph{Environ Earth Sci,} \textbf{69(2):}443--452, (2013)
+
+\bibitem{sun:nankou}
+Sun F, Shao H, Wang W, et al.: Groundwater deterioration in Nankou--a suburban area of Beijing: data assessment and remediation scenarios. \emph{Environ Earth Sci,} \textbf{67(6):}1573--1586, (2012)
 
 \end{thebibliography} 
