--- a/ogsde-man.tex
+++ b/ogsde-man.tex
@@ -8,6 +8,7 @@
 \usepackage{subfig}           % enables subfigures
 \usepackage{amsmath}          % the one and only AMS-Math
 \usepackage{makeidx}          % creating an index
+\usepackage{wrapfig}          % using floating figures
 
 % ----------------------------------------------------------
 % My own commands
@@ -95,7 +96,7 @@
 \hspace*{6cm}\=aa\kill
 \begin{minipage}[t]{0.62\textwidth}
 \noindent This manual has been compiled based on the \ogs Data Explorer 6 beta \\
-(as of April 2013).\\
+(as of October 2013).\\
 \\
 This document as well as its sources are published under Creative Commons Attribution-Noncommercial-Share Alike 3.0 Un\-por\-ted License. For more information go to \url{http://creativecommons.org/licenses/by-nc-sa/3.0/}. \\
 \\
